fix icons on mobile global nav and other fixes

--- a/assets/sass/components/mega-menu.scss
+++ b/assets/sass/components/mega-menu.scss
@@ -24,6 +24,9 @@
     box-shadow: 0 4px 4px fade-out($black, 0.7);
     li {display: block;}
   }
+  .dropdown-backdrop {
+    display: none;
+  }
   .no-ie &.nav-open {
     z-index: 9999;
   }
